--- a/sbwilger.DAL.Migrations.csproj
+++ b/sbwilger.DAL.Migrations.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00707" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00707" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00707" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.5">
       <PrivateAssets>all</PrivateAssets>
